--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "express": "^4.19.2",
+    "intl": "^1.2.5",
     "next": "14.2.4",
     "prisma": "^5.16.1",
     "react": "^18",
