--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.16.1",
     "axios": "^1.7.2",
     "express": "^4.19.2",
+    "file-saver": "^2.0.5",
     "intl": "^1.2.5",
     "next": "14.2.4",
     "prisma": "^5.16.1",
@@ -20,6 +21,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
